<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <string name="login_error">Login error</string>
    <!--Strings related to user account screen-->
    <string name="user_account_title">User Accounts</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="total_plan_value">Total Plan Value: £</string>
    <!--String related to Individual Account screen-->
    <string name="individual_account_title">Individual Account</string>
    <string name="plan_value">Plan Value: £</string>
    <string name="moneybox_value">Moneybox: £</string>
    <string name="action_add_value">Add £10</string>
    <string name="payment_error">Payment error</string>
</resources>
