<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.IndividualAccountActivity">

    <TextView
            android:id="@+id/tv_individual_account_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:textSize="16sp"
            tools:text="Individual account title"/>

    <TextView
            android:id="@+id/tv_plan_value_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_individual_account_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:textSize="16sp"
            android:text="@string/plan_value"/>

    <TextView
            android:id="@+id/tv_plan_value_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_individual_account_title"
            app:layout_constraintLeft_toRightOf="@id/tv_plan_value_title"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:textSize="16sp"
            tools:text="500"/>

    <TextView
            android:id="@+id/tv_moneybox_value_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_plan_value_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:textSize="16sp"
            android:text="@string/moneybox_value"/>

    <TextView
            android:id="@+id/tv_moneybox_value_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_plan_value_title"
            app:layout_constraintLeft_toRightOf="@id/tv_moneybox_value_title"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:textSize="16sp"
            tools:text="50"/>

    <Button
            android:id="@+id/btn_add_value"
            style="@style/Widget.Button.Colored.Rounded"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_moneybox_value_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/action_add_value"
            android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>